fix: hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,11 @@ body {
   overflow-x: scroll;
   height: 540px;
   width: 400px;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 h1 {
